feat: add icon and link support for Group component

--- a/docs/developer-docs/5.39.x/get-started/welcome.mdx
+++ b/docs/developer-docs/5.39.x/get-started/welcome.mdx
@@ -10,164 +10,230 @@ import { Hero } from "@/components/landing-pages/Hero";
 import { Divider } from "@/components/landing-pages/Divider";
 import { InstallWebinyBanner } from "@/components/landing-pages/InstallWebinyBanner";
 import { FeatureList } from "@/components/landing-pages/FeatureList";
-import { Section, SectionTitle, SectionRow, SectionBox } from "@/components/landing-pages/Section"
+import { Section, SectionTitle, SectionRow, SectionBox } from "@/components/landing-pages/Section";
 
-import {ReactComponent as WhyWebinyIcon} from './assets/feature-icons/why-webiny.svg';
-import {ReactComponent as SecurityIcon} from './assets/feature-icons/security.svg';
-import {ReactComponent as InfrastructureIcon} from './assets/feature-icons/infrastructure.svg';
-import {ReactComponent as FeaturesIcon} from './assets/feature-icons/features.svg';
-import {ReactComponent as FrameworkIcon} from './assets/feature-icons/framework.svg';
-import {ReactComponent as SelfHostingIcon} from './assets/feature-icons/selfhosting.svg';
+import { ReactComponent as WhyWebinyIcon } from "./assets/feature-icons/why-webiny.svg";
+import { ReactComponent as SecurityIcon } from "./assets/feature-icons/security.svg";
+import { ReactComponent as InfrastructureIcon } from "./assets/feature-icons/infrastructure.svg";
+import { ReactComponent as FeaturesIcon } from "./assets/feature-icons/features.svg";
+import { ReactComponent as FrameworkIcon } from "./assets/feature-icons/framework.svg";
+import { ReactComponent as SelfHostingIcon } from "./assets/feature-icons/selfhosting.svg";
 
-import {ReactComponent as HeadlessCmsIcon} from './assets/product-icons/headless-cms.svg';
-import {ReactComponent as PageBuilderIcon} from './assets/product-icons/page-builder.svg';
-import {ReactComponent as FileManagerIcon} from './assets/product-icons/file-manager.svg';
-import {ReactComponent as FormBuilderIcon} from './assets/product-icons/form-builder.svg';
-import {ReactComponent as ApwIcon} from './assets/product-icons/apw.svg';
+import { ReactComponent as HeadlessCmsIcon } from "./assets/product-icons/headless-cms.svg";
+import { ReactComponent as PageBuilderIcon } from "./assets/product-icons/page-builder.svg";
+import { ReactComponent as FileManagerIcon } from "./assets/product-icons/file-manager.svg";
+import { ReactComponent as FormBuilderIcon } from "./assets/product-icons/form-builder.svg";
+import { ReactComponent as ApwIcon } from "./assets/product-icons/apw.svg";
 
+import { ReactComponent as VideoIcon } from "./assets/development-icons/video.svg";
+import { ReactComponent as ConceptsIcon } from "./assets/development-icons/core-concepts.svg";
+import { ReactComponent as CustomizeIcon } from "./assets/development-icons/customize.svg";
+import { ReactComponent as CiCdIcon } from "./assets/development-icons/ci-cd.svg";
+import { ReactComponent as SecurityFrameworkIcon } from "./assets/development-icons/security.svg";
+import { ReactComponent as BgTasksIcon } from "./assets/development-icons/background-tasks.svg";
 
-import {ReactComponent as VideoIcon} from './assets/development-icons/video.svg';
-import {ReactComponent as ConceptsIcon} from './assets/development-icons/core-concepts.svg';
-import {ReactComponent as CustomizeIcon} from './assets/development-icons/customize.svg';
-import {ReactComponent as CiCdIcon} from './assets/development-icons/ci-cd.svg';
-import {ReactComponent as SecurityFrameworkIcon} from './assets/development-icons/security.svg';
-import {ReactComponent as BgTasksIcon} from './assets/development-icons/background-tasks.svg';
-
-import {ReactComponent as UserGuidesIcon} from './assets/resources-icons/user-guides.svg';
-import {ReactComponent as ReleaseNotesIcon} from './assets/resources-icons/release-notes.svg';
-import {ReactComponent as CompanyHandbookIcon} from './assets/resources-icons/company-handbook.svg';
-import {ReactComponent as CommunityIcon} from './assets/resources-icons/community.svg';
-
+import { ReactComponent as UserGuidesIcon } from "./assets/resources-icons/user-guides.svg";
+import { ReactComponent as ReleaseNotesIcon } from "./assets/resources-icons/release-notes.svg";
+import { ReactComponent as CompanyHandbookIcon } from "./assets/resources-icons/company-handbook.svg";
+import { ReactComponent as CommunityIcon } from "./assets/resources-icons/community.svg";
 
 <Hero />
-<Divider/>
-<InstallWebinyBanner/>
+<Divider />
+<InstallWebinyBanner />
 
-<FeatureList items={[
+<FeatureList
+  items={[
     {
-        label: "Why use Webiny?",
-        link: "/docs/why-webiny",
-        icon: WhyWebinyIcon
+      label: "Why use Webiny?",
+      link: "/docs/why-webiny",
+      icon: WhyWebinyIcon
     },
     {
-        label: "Security",
-        link: "/docs/why-webiny",
-        icon: SecurityIcon
+      label: "Security",
+      link: "/docs/why-webiny",
+      icon: SecurityIcon
     },
     {
-        label: "Infrastructure",
-        link: "/docs/why-webiny",
-        icon: InfrastructureIcon
+      label: "Infrastructure",
+      link: "/docs/why-webiny",
+      icon: InfrastructureIcon
     },
     {
-        label: "Features overview",
-        link: "/docs/why-webiny",
-        icon: FeaturesIcon
+      label: "Features overview",
+      link: "/docs/why-webiny",
+      icon: FeaturesIcon
     },
     {
-        label: "Development framework",
-        link: "/docs/why-webiny",
-        icon: FrameworkIcon
+      label: "Development framework",
+      link: "/docs/why-webiny",
+      icon: FrameworkIcon
     },
     {
-        label: "Self-hosting",
-        link: "/docs/why-webiny",
-        icon: SelfHostingIcon
+      label: "Self-hosting",
+      link: "/docs/why-webiny",
+      icon: SelfHostingIcon
     }
-]}/>
+  ]}
+/>
 
-<Divider/>
+<Divider />
 
 <Section>
-    <SectionTitle title="Products" subText="Learn about how to customize and build on top of existing Webiny products." categoryTitle="Products" />
-    <SectionRow>
-        <SectionBox title="Headless CMS" Icon={HeadlessCmsIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-        <SectionBox title="Page Builder" Icon={PageBuilderIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-    </SectionRow>
-    <SectionRow>
-        <SectionBox title="File Manager" Icon={FileManagerIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-        <SectionBox title="Form Builder" Icon={FormBuilderIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-        <SectionBox title="Advanced Publishing Workflow" Icon={ApwIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-    </SectionRow>
+  <SectionTitle
+    title="Products"
+    subText="Learn about how to customize and build on top of existing Webiny products."
+    categoryTitle="Products"
+  />
+  <SectionRow>
+    <SectionBox title="Headless CMS" Icon={HeadlessCmsIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+    <SectionBox title="Page Builder" Icon={PageBuilderIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+  </SectionRow>
+  <SectionRow>
+    <SectionBox title="File Manager" Icon={FileManagerIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+    <SectionBox title="Form Builder" Icon={FormBuilderIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+    <SectionBox title="Advanced Publishing Workflow" Icon={ApwIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+  </SectionRow>
 </Section>
 
-<Divider/>
+<Divider />
 
 <Section>
-    <SectionTitle 
-        title="Development with Webiny" 
-        subText="If you're only starting your development journey with Webiny, make sure to check out these resources." 
-        categoryTitle="Development" />
-    <SectionRow>
-        <SectionBox title="Video training course" Icon={VideoIcon} learnMoreLink="/headless-12">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-        <SectionBox title="Core concepts" Icon={ConceptsIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-        <SectionBox title="Customize and extend" Icon={CustomizeIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-    </SectionRow>
-    <SectionRow>
-        <SectionBox title="CI/CD setup" Icon={CiCdIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-        <SectionBox title="Security Framework" Icon={SecurityFrameworkIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-        <SectionBox title="Background tasks" Icon={BgTasksIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-    </SectionRow>
+  <SectionTitle
+    title="Development with Webiny"
+    subText="If you're only starting your development journey with Webiny, make sure to check out these resources."
+    categoryTitle="Development"
+  />
+  <SectionRow>
+    <SectionBox title="Video training course" Icon={VideoIcon} learnMoreLink="/headless-12">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+    <SectionBox title="Core concepts" Icon={ConceptsIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+    <SectionBox title="Customize and extend" Icon={CustomizeIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+  </SectionRow>
+  <SectionRow>
+    <SectionBox title="CI/CD setup" Icon={CiCdIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+    <SectionBox title="Security Framework" Icon={SecurityFrameworkIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+    <SectionBox title="Background tasks" Icon={BgTasksIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+  </SectionRow>
 </Section>
 
-<Divider/>
+<Divider />
 
 <Section>
-    <SectionTitle 
-        title="Additional resources" 
-        subText="Check out some of the additional resources to learn more and to engage closer with our community." 
-        categoryTitle="Resources" />
-    <SectionRow>
-        <SectionBox title="User guides" Icon={UserGuidesIcon} learnMoreLink="/headless-12">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-        <SectionBox title="Release notes" Icon={ReleaseNotesIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-    </SectionRow>
-    <SectionRow>
-        <SectionBox title="Company handbook" Icon={CompanyHandbookIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-        <SectionBox title="Community" Icon={CommunityIcon} learnMoreLink="/headless">
-            <p>Webiny's Headless CMS is one of the most customizable, and scalable options on the market.</p>
-            <p>Learn how to create plugins and customize the Headless CMS experience to your content needs.</p>
-        </SectionBox>
-    </SectionRow>
+  <SectionTitle
+    title="Additional resources"
+    subText="Check out some of the additional resources to learn more and to engage closer with our community."
+    categoryTitle="Resources"
+  />
+  <SectionRow>
+    <SectionBox title="User guides" Icon={UserGuidesIcon} learnMoreLink="/headless-12">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+    <SectionBox title="Release notes" Icon={ReleaseNotesIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+  </SectionRow>
+  <SectionRow>
+    <SectionBox title="Company handbook" Icon={CompanyHandbookIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+    <SectionBox title="Community" Icon={CommunityIcon} learnMoreLink="/headless">
+      <p>
+        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+      </p>
+      <p>
+        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+      </p>
+    </SectionBox>
+  </SectionRow>
 </Section>
