Headless CMS overview page, plus other tweaks

--- a/docs/developer-docs/5.39.x/get-started/welcome.mdx
+++ b/docs/developer-docs/5.39.x/get-started/welcome.mdx
@@ -50,7 +50,7 @@ import { ReactComponent as CommunityIcon } from "./assets/resources-icons/commun
     },
     {
       label: "Security",
-      link: "/docs/why-webiny",
+      link: "/docs/overview/features/security",
       icon: SecurityIcon
     },
     {
